--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,60 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IAmh3T"><img src="https://images-na.ssl-images-amazon.com/images/I/719IDvQolVL._SX679_.jpg" alt="Twelve South Inspire: Mac Candle No. 2" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IAmh3T">Twelve South Inspire: Mac Candle No. 2 | Limited edition candle in an Apple-inspired container</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IAmh3T">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MCJnvQ"><img src="https://images-na.ssl-images-amazon.com/images/I/41EH8c0bs5L._AC_US218_.jpg" alt="Stone & Beam Fry Pan With Lid" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MCJnvQ">Stone & Beam Fry Pan With Lid, 12 Inch, Tri-Ply Stainless Steel</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$48.06</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MCJnvQ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="14" data-price="21.56">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IywBJD"><img src="https://m.media-amazon.com/images/I/61qH4OQK4IL._AC_UY218_QL90_.jpg" alt="Stainless Steel Tumbler" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>14% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IywBJD">Tervis 1277989 Wood Barrel Stainless Steel Tumbler with Clear and Black Hammer Lid 20oz, Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.56</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IywBJD">Shop Now at Amazon</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="30.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2IDqsMj"><img src="https://m.media-amazon.com/images/I/71ogaAK8DGL._AC_UL320_.jpg" alt="playStation" /></a>
