--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,220 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="45" data-price="38.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MGCLfS"><img src="https://m.media-amazon.com/images/I/51eJIG1UVVL._SR400,400_.jpg" alt="Autel AP200 OBD2 Scanner Bluetooth Car Code Reader" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MGCLfS">Autel AP200 OBD2 Scanner Bluetooth Car Code Reader with All System Diagnoses and Service Functions Professional Automotive Scan Tool for iPhone Android</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$38.47</span><span class="ori_price">$69.95</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>45% off at $69.95</strong> with promo code: <strong>45ABCDEF</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MGCLfS">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IAivaJ"><img src="https://m.media-amazon.com/images/I/71TQzvoOXfL._SR400,400_.jpg" alt="Wireless Charger Mouse Pad" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IAivaJ">Wireless Charger Mouse Pad, Cobble Pro 10W Fast Charging Synthetic Leather Mouse Pad</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.49</span><span class="ori_price">$28.99</span></address>
+      <p><span>Take <strong>50% off at $28.99</strong> with promo code: <strong>50COBBMO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IAivaJ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="6.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XDKg8A"><img src="https://m.media-amazon.com/images/I/51Os0CPzMvL._SR400,400_.jpg" alt="Adorllya Water Shoes Socks" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XDKg8A">Adorllya Water Shoes Socks for Women Men Barefoot Aqua Shoes Quick Dry Slip on Hiking Swim Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.40</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>60% off at $15.99</strong> with promo code: <strong>60LP64XQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XDKg8A">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IG04BA"><img src="https://m.media-amazon.com/images/I/611SYoMHBWL._SR400,400_.jpg" alt="Electric Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IG04BA">Secura K15-F1E Double Wall Stainless Steel Electric Kettle Water Heater for Tea Coffee w/Auto Shut-Off and Boil-Dry Protection, 1.5L/1.6Qt, Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>50% off at $39.99</strong> with promo code: <strong>50KETTLE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 22, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IG04BA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="6.65">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KJ7oPt"><img src="https://m.media-amazon.com/images/I/71+hiPSsWrL._SR400,400_.jpg" alt="Travel Pillow" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KJ7oPt">Travel Pillow, Comfortable & Breathable Memory Foam Neck Pillow for Traveling Car Airplane Bus Train with Portable Drawstring Bag(Adult Size, Blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.65</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>65% off at $18.99</strong> with promo code: <strong>65KHZSWQ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KJ7oPt">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="7.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XDwKSv"><img src="https://m.media-amazon.com/images/I/71mb+SR3PNL._SR400,400_.jpg" alt="CREATIVE DESIGN 1 Pack Sticky Notes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XDwKSv">CREATIVE DESIGN 1 Pack Sticky Notes 60 Ruled Notes 12 Fineliner Colored Pens & 2 Highlighter, School & Office Supplies</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.60</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>60% off at $18.99</strong> with promo code: <strong>602DQT1E</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XDwKSv">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31tx3RV"><img src="https://m.media-amazon.com/images/I/51NBy3rjWCL._SR400,400_.jpg" alt="Bluetooth in Ear Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31tx3RV">Bluetooth in Ear Headphones, dodocool Wireless 4.1 Magnetic Headphones</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>70% off at $39.99</strong> with promo code: <strong>70OORAD3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31tx3RV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KJHJ9d"><img src="https://m.media-amazon.com/images/I/51rDDa5wHKL._SR400,400_.jpg" alt="Manfiter Bluetooth FM Transmitter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KJHJ9d">Manfiter Bluetooth FM Transmitter Wireless Radio Adapter Car Kit Bluetooth 4.2 Transmitter Audio for Car</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span></address>
+      <p><span>Take <strong>40% off at $15.99</strong> with promo code: <strong>40M9ST1Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KJHJ9d">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="9.12">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IB3ipS"><img src="https://m.media-amazon.com/images/I/61X0NSDCm9L._SR400,400_.jpg" alt="Portable Mini Desk Fans" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IB3ipS">LOBKIN Foldable Personal Portable Mini Desk Fans with USB Rechargeable 2600mAh Battery Operated Electric Fan</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.12</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>62% off at $23.99</strong> with promo code: <strong>62S7TOQV</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IB3ipS">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WyAdQO"><img src="https://m.media-amazon.com/images/I/81gTlSpfvlL._SR400,400_.jpg" alt="AUTMOR Car Trash Can" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WyAdQO">AUTMOR Car Trash Can with Lid and Storage Pockets, Auto Car Garbage Can, 100% Leak-Proof Car Organizer, Multipurpose Waterproof Car Trash Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$17.99</span></address>
+      <p><span>Take <strong>40% off at $17.99</strong> with promo code: <strong>40DI1CZS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WyAdQO">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="51" data-price="14.69">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Kbnjq1"><img src="https://m.media-amazon.com/images/I/71mxd8NtQJL._SR400,400_.jpg" alt="HELLOYEE Full Face Snorkel Mask" /></a>
