--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -66,7 +66,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Promotion Codes We Picked On Amazon Jun. 11. 2019.</h2>
+        <h2>Promotion Codes We Have Picked On Amazon Jun. 12. 2019.</h2>
         
         <div class="sort_box clearfix">
           <ul>
@@ -92,7 +92,7 @@
           
           <%= render 'deals/body_promocode' %>
         </div>
-        <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_03">GO TO PROMO CODES OF YESTERDAY</a></h2>
+        <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_04">GO TO PROMO CODES OF YESTERDAY</a></h2>
         
       </div><!--./rt_cnt-->    
 
