--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,210 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="32" data-price="27.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WEiUTi"><img src="https://images-na.ssl-images-amazon.com/images/I/51DdLSS%2B9BL._SX467_BO1,204,203,200_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WEiUTi">Cocktail Codex: Fundamentals, Formulas, Evolutions Hardcover</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$27.19</span><span class="ori_price">$40.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WEiUTi">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IAm9RZ"><img src="https://images-na.ssl-images-amazon.com/images/I/81pYgLlgNTL._SX679_.jpg" alt="BELLA 14641 4-in-1 Electric Spiralizer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IAm9RZ">BELLA 14641 4-in-1 Electric Spiralizer with Recipe Book, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IAm9RZ">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="7" data-price="34.43">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31nCUIF"><img src="https://images-na.ssl-images-amazon.com/images/I/71AbLOt1-AL._SY879_.jpg" alt="Cold Brewer Portable Pour Over Coffee Mug" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>7% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31nCUIF">Full Circle Brumi FC17510W Cold Brewer Portable Pour Over Coffee Mug, 12 oz, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$34.43</span><span class="ori_price">$36.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31nCUIF">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2F6fXQv"><img src="https://images-na.ssl-images-amazon.com/images/I/91g5ByO2x8L._SX522_.jpg" alt="Gaea Miracle Bath Bombs Gift Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2F6fXQv">Gaea Miracle Bath Bombs Gift Set, 6 X 4.0 oz Spa Bomb Fizzies Vegan Natural Essential Oils Handmade Birthday Gift Idea</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2F6fXQv">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="42.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X80U32"><img src="https://images-na.ssl-images-amazon.com/images/I/81LCKl2SPpL._SX522_.jpg" alt="Homedics 3D Shiatsu & Vibration Massage Pillow" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X80U32">Homedics 3D Shiatsu & Vibration Massage Pillow with Heat </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$42.95</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2X80U32">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="34" data-price="46.05">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IFjdDq"><img src="https://images-na.ssl-images-amazon.com/images/I/51sfi3PFeHL._SX347_BO1,204,203,200_.jpg" alt="National Geographic Infographics" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IFjdDq">National Geographic Infographics</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$46.05</span><span class="ori_price">$70.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IFjdDq">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="49.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X5e0hI"><img src="https://images-na.ssl-images-amazon.com/images/I/710pE7jXEcL._SX522_.jpg" alt="Anolon Nouvelle Copper " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X5e0hI">Anolon Nouvelle Copper Hard-Anodized Nonstick Twin Pack French Skillets, 8-Inch and 10-Inch, Dark Gray</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.95</span><span class="ori_price">$100.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2X5e0hI">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="22.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KdYzgW"><img src="https://images-na.ssl-images-amazon.com/images/I/61-L2zt%2BSDL._SX522_.jpg" alt="Battery-Powered Protein Shaker Bottle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KdYzgW">PROMiXX (2018 Model) - The Original Vortex Mixer | Beautifully Engineered High-Torque Battery-Powered Protein Shaker Bottle</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$22.99</span><span class="ori_price">$28.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KdYzgW">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="21.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2F6gLVx"><img src="https://images-na.ssl-images-amazon.com/images/I/61t3zIwFTGL.jpg" alt="Bob Ross the Art of Chill" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2F6gLVx">Bob Ross the Art of Chill</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.70</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2F6gLVx">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31tTgiH"><img src="https://images-na.ssl-images-amazon.com/images/I/71I6oj6ZFBL._SX522_.jpg" alt="Echo Plus (2nd Gen)" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31tTgiH">Echo Plus (2nd Gen) - Premium sound with built-in smart home hub - Charcoal</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$119.99</span><span class="ori_price">$149.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31tTgiH">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="14.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MKbN7f"><img src="https://images-na.ssl-images-amazon.com/images/I/61iGZFNPktL._SX522_.jpg" alt="Monopoly" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MKbN7f">Monopoly: Fortnite Edition Board Game Inspired by Fortnite Video Game Ages 13 and Up</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.49</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MKbN7f">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="56" data-price="discounted_price">
   <div class="image_box">
